--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,15 @@ h3 {
   margin: auto;
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 p {
   width: 97%;
   margin: auto;
   color: #D0C9C0;
+  padding: 10px;
 }
 
 .attribution {
