--- a/css/styles.css
+++ b/css/styles.css
@@ -22,19 +22,21 @@ body {
   width: 95%;
 }
 
+.second {
+  padding: 3px;
+}
+
 h3 {
   width: 85%;
   margin: auto;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: auto;
 }
 
 p {
-  width: 97%;
+  width: 99%;
   margin: auto;
   color: #D0C9C0;
-  margin: auto;
 }
 
 .attribution {
