--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   margin: auto;
   padding: 15px;
   border-radius: 30px;
-  width: 25%;
+  width: 30vmin;
   text-align: center;
 }
 
@@ -31,14 +31,14 @@ h3 {
   margin: auto;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-size:2vw;
+  font-size: 85%;
 }
 
 p {
   width: 97%;
   margin: auto;
   color: #D0C9C0;
-  font-size:2vw;
+  font-size:65%;
 }
 
 .attribution {
